# ycg

./: .gitignore  LICENSE  README.md  flake.nix  main.py  pyproject.toml  requirements.txt  ycg.py
src/: ycg.py
